# rust4eska

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.release  Dockerfile.test  Makefile  README.md  README.ru.md  compose.yaml  postgres.toml
.memory.md/: MAIN.md  NOTES.md  TASK.md  TODO.md  USER_NOTES.md
.memory.md/plans/: PLAN_1_test_on_production.md
.sisyphus/: boulder.json
.sisyphus/drafts/: rbac_plan.md
.sisyphus/plans/: r4a-web-ui.md  rbac-integration.md  vault-implementation.md
binaries/r4a-agent/: Cargo.toml
binaries/r4a-agent/src/: main.rs
binaries/r4a-cli/: Cargo.toml
binaries/r4a-cli/src/: main.rs
binaries/r4a-server/: Cargo.toml
binaries/r4a-server/src/: main.rs
binaries/r4a-tui/: Cargo.toml
binaries/r4a-tui/src/: api_client.rs  main.rs
binaries/r4a-tui/src/ui/: dashboard.rs  git.rs  logs.rs  manifests.rs  mod.rs  not_implemented.rs  rbac.rs  update.rs  vault.rs
binaries/r4a-web/: Cargo.toml
binaries/r4a-web/frontend/: package-lock.json  package.json  vite.config.ts
binaries/r4a-web/frontend/src/: App.tsx  index.css
binaries/r4a-web/frontend/src/api/: client.ts
binaries/r4a-web/frontend/src/components/: Layout.tsx
binaries/r4a-web/frontend/src/context/: AuthContext.tsx
binaries/r4a-web/frontend/src/pages/: Connections.tsx  Containers.tsx  Dashboard.tsx  Git.tsx  Login.tsx  Logs.tsx  Manifests.tsx  RBAC.tsx  Registry.tsx  Updates.tsx  Vault.tsx
binaries/r4a-web/src/: main.rs
crates/r4a-client/: Cargo.toml
crates/r4a-client/src/: lib.rs
crates/r4a-core/: Cargo.toml
crates/r4a-core/src/: crypto.rs  lib.rs
crates/r4a-core/src/models/: mod.rs
crates/r4a-git-registry/: Cargo.toml
crates/r4a-git-registry/src/: handler.rs  lib.rs  registry.rs
crates/r4a-ingress/: Cargo.toml
crates/r4a-ingress/src/: lib.rs
crates/r4a-service/: Cargo.toml
crates/r4a-service/src/: lib.rs
crates/r4a-store/: Cargo.toml
crates/r4a-store/src/: lib.rs
crates/r4a-telemetry/: Cargo.toml
crates/r4a-telemetry/src/: collector.rs  lib.rs  store.rs
crates/r4a-vpn/: Cargo.toml
crates/r4a-vpn/src/: dns.rs  lib.rs  wireguard.rs
crates/r4a-worker/: Cargo.toml
crates/r4a-worker/src/: lib.rs
scripts/: install-agent.sh  install-cli.sh  install-server.sh
