[workspace]
members = [
    "crates/r4a-vpn",
    "crates/r4a-git-registry",
    "binaries/r4a-server",
    "binaries/r4a-agent",
    "binaries/r4a-tui",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
