[workspace]
members = [
    "crates/r4a-vpn",
    "crates/r4a-git-registry",
    "binaries/r4a-server",
        "binaries/r4a-agent",
    "binaries/r4a-tui",
    "binaries/r4a-cli",
    "binaries/r4a-web",
    "crates/r4a-store",
 "crates/r4a-service", "crates/r4a-core", "crates/r4a-worker", "crates/r4a-ingress",
    "crates/r4a-client",
]
resolver = "2"

[workspace.dependencies]
r4a-core = { path = "crates/r4a-core" }
r4a-client = { path = "crates/r4a-client" }
r4a-worker = { path = "crates/r4a-worker" }
r4a-ingress = { path = "crates/r4a-ingress" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
constant_time_eq = "0.3"
bollard = "0.18"
pingora = { version = "0.4", features = ["lb"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rcgen = "0.12"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
tower = "0.4"
