[package]
name = "r4a-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r4a-agent"
path = "src/main.rs"

[dependencies]
r4a-core = { workspace = true }
r4a-worker = { workspace = true }
r4a-vpn = { path = "../../crates/r4a-vpn" }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
sha2 = { workspace = true }
r4a-service = { version = "0.1.0", path = "../../crates/r4a-service" }
