[package]
name = "r4a-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r4a-agent"
path = "src/main.rs"

[dependencies]
r4a-core = { workspace = true }
r4a-worker = { workspace = true }
r4a-telemetry = { workspace = true }
r4a-vpn = { path = "../../crates/r4a-vpn" }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
r4a-service = { version = "0.1.0", path = "../../crates/r4a-service" }
axum = { workspace = true }
bollard = { workspace = true }
futures-util = "0.3"
constant_time_eq = { workspace = true }
ed25519-dalek = { workspace = true }
