[package]
name = "r4a-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r4a-server"
path = "src/main.rs"

[dependencies]
r4a-vpn = { path = "../../crates/r4a-vpn" }
r4a-git-registry = { path = "../../crates/r4a-git-registry" }
tokio = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
