[package]
name = "r4a-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r4a-server"
path = "src/main.rs"

[dependencies]
r4a-core = { workspace = true }
r4a-ingress = { workspace = true }
r4a-vpn = { path = "../../crates/r4a-vpn" }
r4a-git-registry = { path = "../../crates/r4a-git-registry" }
tokio = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"
toml = "0.8"
pingora = { workspace = true }
r4a-store = { version = "0.1.0", path = "../../crates/r4a-store" }
r4a-telemetry = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
r4a-service = { version = "0.1.0", path = "../../crates/r4a-service" }
reqwest = { workspace = true }
constant_time_eq = { workspace = true }
ed25519-dalek = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }

