[package]
name = "r4a-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r4a-tui"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
