[package]
name = "r4a-git-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = "1"
http = "1"
http-body-util = "0.1"
tempfile = "3"
serde = { workspace = true }
serde_json = { workspace = true }
r4a-core = { workspace = true }
r4a-store = { path = "../r4a-store" }
argon2 = { workspace = true }
base64 = "0.22"
hex = { workspace = true }
sha2 = { workspace = true }
sled = "0.34.7"
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4"] }
