[package]
name = "r4a-ingress"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
tracing = { workspace = true }
r4a-core = { workspace = true }
r4a-store = { path = "../r4a-store" }
serde = { workspace = true }
serde_json = { workspace = true }
