[package]
name = "r4a-store"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sled = "0.34.7"
tokio.workspace = true
tracing.workspace = true
r4a-core = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
constant_time_eq = { workspace = true }

[dev-dependencies]
tempfile = "3"
