[package]
name = "r4a-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
bollard = { workspace = true }
futures-util = "0.3"
sled = "0.34.7"

[dev-dependencies]
tempfile = "3.27.0"
