[package]
name = "r4a-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = { workspace = true }
base64 = "0.22"
