[package]
name = "r4a-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
r4a-core = { workspace = true }
r4a-service = { path = "../r4a-service" }
tokio = { workspace = true }
bollard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
